[gd_scene load_steps=2 format=3 uid="uid://dpw5v2rl450b7"]

[ext_resource type="Script" uid="uid://vqd1onkogc1h" path="res://scripts/ui/pickaxe_panel.gd" id="1_abcde"]

[node name="PickaxePanel" type="PanelContainer"]
script = ExtResource("1_abcde")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "EQUIPMENT"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Tool: Rusted Pickaxe"

[node name="PowerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Power: 5"

[node name="CritLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Crit Chance: 5%"
